--- a/eCommerce.Service/Web.config
+++ b/eCommerce.Service/Web.config
@@ -11,10 +11,9 @@
   </system.web>
   
   <connectionStrings>
-    <add name="ECommerceDb" connectionString="metadata=res://*/eCommrece.csdl|res://*/eCommrece.ssdl|res://*/eCommrece.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=C:\Somin\eCommarceSite\eCommerceSite\eCommerce.Core\eCommerce.DB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-
+    <!--<add name="ECommerceDb" connectionString="metadata=res://*/eCommrece.csdl|res://*/eCommrece.ssdl|res://*/eCommrece.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=C:\Somin\eCommarceSite\eCommerceSite\eCommerce.Core\eCommerce.DB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="ECommerceDb" connectionString="metadata=res://*/eCommrece.csdl|res://*/eCommrece.ssdl|res://*/eCommrece.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\eCommerce.DB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <!--Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=&quote;c:\Users\SDumaniya.KNOVOS\Documents\Visual Studio 2017\Projects\eCommarceSite\eCommerce.Core\eCommerce.DB.mdf&quote;;Integrated Security=True-->
-
     <!--metadata=res://*/eCommrece.csdl|res://*/eCommrece.ssdl|res://*/eCommrece.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\eCommerce.DB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;-->
   </connectionStrings>
   <runtime>
